<resources>

    <string name="app_name">Edival</string>
    <string name="edival">EDIVAL</string>
    <string name="app_description">Edival adalah aplikasi yang didesain untuk meningkatkan produktivitas dalam pengelolaan bahan makanan. Aplikasi ini menawarkan berbagai fitur unggulan, antara lain:

1. Prediksi Kondisi Bahan Makanan:
   Edival menggunakan model Machine Learning yang dibangun dengan TensorFlow untuk memprediksi apakah suatu bahan makanan sudah mulai membusuk atau masih segar. Dengan informasi ini, pengguna dapat mengelola stok bahan makanan dengan lebih efisien.

2. Rekomendasi Makanan:
   Tak perlu bingung memilih apa yang ingin dimasak! Edival memberikan rekomendasi makanan beserta daftar bahan dan prosedur pembuatannya. Pengguna dapat menemukan inspirasi baru untuk menyajikan hidangan lezat.

3. Reminder Penyimpanan:
   Dengan fitur reminder, pengguna dapat menyimpan bahan atau makanan dengan aman dan tanpa risiko lupa. Edival memberikan notifikasi ketika makanan mendekati batas penyimpanannya, sehingga mencegah pemborosan dan memastikan kualitas bahan makanan tetap terjaga.

Edival, teman setia Anda dalam merencanakan dan mengelola persediaan makanan untuk kehidupan yang lebih sehat dan efisien.</string>

    <string name="welkom">Welcome Back!</string>
    <string name="please">Please sign in to continue</string>
    <string name="forgotpw">Forgot password?</string>
    <string name="noaccount">Don\'t have account?</string>
    <string name="createacc">Create new account</string>
    <string name="please2">Please sing up to continue</string>
    <string name="haveaccount">Have an account?</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>

    <!-- Tutorial Text Resources -->
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="tutor1">Predict</string>
    <string name="tutor2">Recommendation</string>
    <string name="tutor3">Reminder</string>
    <string name="tutor1_desc">Snap and Know. Use the camera to detect food freshness instantly</string>
    <string name="tutor2_desc">Fresh or Not. Receive meal ideas based on food freshness predictions</string>
    <string name="tutor3_desc">Never Waste Again. Get alerts to use or dispose of stored ingredients</string>

    <!-- Setting text resources -->
    <string name="name">Marthe Jhon</string>
    <string name="email">mjhonnih@gmail.com</string>
    <string name="setprofile">Edit Profile</string>
    <string name="settheme">Theme</string>
    <string name="setlang">Language</string>
    <string name="back">Back</string>

    <string name="logout">Log Out</string>

    <!-- Camera & Result text resources -->
    <string name="select">Select Items</string>
    <string name="recommen">Recommendation</string>
    <string name="title_recommen">Lemon Chicken</string>
    <string name="desc_recommen">Hidangan ayam yang lezat dan segar dengan rasa lemon yang khas. Ayam dimasak bersama dengan saus yang terbuat dari lemon juice, zest (kupasan kulit lemon yang beraroma), bawang putih, mentega, dan rempah-rempah. Hidangan ini memiliki rasa asam dan manis yang seimbang, serta aroma harum lemon yang memikat.</string>
    <string name="detail_recommen">Ingredient</string>
    <string name="ingredient">Main ingredient</string>
    <string name="ingredients">Chiken, Lemon</string>
    <string name="phone_num">098761238</string>
    <string name="tv_edit_name">Name</string>
    <string name="tv_edit_phone">Phone Number</string>
    <string name="tv_edit_password">Password</string>
    <string name="save">Save</string>
    <string name="result">Result</string>
    <string name="food_name">Lemon</string>
    <string name="recomm_type">Food</string>
    <string name="check_detail">Check Detail</string>
    <string name="copyright">Copyright by @Bangcor</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="eng_language">English</string>
    <string name="id_language">Indonesia</string>
    <string name="food3">Food 3</string>
    <string name="food2">Food 2</string>
    <string name="food1">Food 1</string>
    <string name="password_edit_part">password</string>

    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_calendar">Calendar</string>
    <string name="nameFood">Nama Makanan :</string>
    <string name="penyimpanan">Storage :</string>
    <string name="namefood">Food Name :</string>
    <string name="simpan">Saved Since :</string>
    <string name="expire">Hold up to :</string>
    <string name="jenis">Food Type :</string>
    <string name="detail">Details :</string>
    <string name="masa">Past storage period</string>
    <string name="kadaluarsa">Makanan akan segera kadaluarsa!</string>
    <string name="notification">Apel yang kamu simpan pada tanggal 14 Oktober akan segera kadaluarsa, segera olah atau makan bahan makanan tersebut!</string>
    <string name="take_photo">Take Photo</string>
    <string name="tv_edit_email">email</string>
    <string name="pass_edit">Password</string>
    <string name="tv_input_newPass">INPUT NEW PASSWORD</string>
    <string name="new_pw">new password</string>
    <string name="confirm_new_pw">confirm password</string>
    <string name="update_pw">update</string>
    <string name="tv_input_pass">input password</string>
    <string name="input_password">password</string>
    <string name="pass_empty_warn">Field is empty</string>
    <string name="pass_wrong">Wrong Password</string>
    <string name="pass_too_short">Password is to short</string>
    <string name="pass_not_match">Password not match</string>
    <string name="pass_updated">Password Updated</string>
    <string name="landing">Your Food Freshness Expert. Predicts quality, enhances health, and simplifies meal choices with cutting-edge AI technology</string>
    <string name="the">The </string>
    <string name="descNotif"> that you stored on  </string>
    <string name="immidietly">will expire soon, please process or eat the food immediately.</string>

    <string-array name="foodType">
        <item>Meat</item>
        <item>Vegetable</item>
        <item>Fruit</item>
        <item>Others</item>
    </string-array>
    <string-array name="placement">
        <item>Brangkas</item>
        <item>Kulkas</item>
        <item>Fruit</item>
        <item>Others</item>
    </string-array>
</resources>