<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.EditPassFragment">

    <LinearLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="16dp"
        android:background="@drawable/bg_inputtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_input_pass"
            android:textAlignment="center"
            style="@style/tvRegular_Style"/>

        <EditText
            android:id="@+id/input_Password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/tv_edit_password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_inputtext"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/input_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_inputtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_input_newPass"
            android:textAlignment="center"
            style="@style/tvRegular_Style"/>

        <EditText
            android:id="@+id/edit_Pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:hint="@string/new_pw"
            android:inputType="textPassword"
            android:background="@drawable/bg_inputtext"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edit_Confrirm_Pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:hint="@string/confirm_new_pw"
            android:inputType="textPassword"
            android:background="@drawable/bg_inputtext"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button"
            android:text="@string/update_pw"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>