<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.RecommendationActivity">

    <ImageButton
        android:id="@+id/backarrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="25dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/recommen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/recommen"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintBottom_toBottomOf="@id/backarrow"
        app:layout_constraintStart_toEndOf="@id/backarrow"
        app:layout_constraintTop_toTopOf="@id/backarrow" />

    <ImageView
        android:id="@+id/image_recommen"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/recomm_default"
        app:layout_constraintTop_toBottomOf="@id/backarrow" />

    <TextView
        android:id="@+id/title_recommen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_recommen"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="8dp"
        android:textStyle="bold|normal"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/image_recommen"
        app:layout_constraintStart_toStartOf="@id/image_recommen"
        app:layout_constraintBottom_toTopOf="@id/desc_recommen"/>

    <TextView
        android:id="@+id/desc_recommen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_recommen"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/title_recommen"
        app:layout_constraintTop_toBottomOf="@id/title_recommen"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_recommen"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="8dp"
        android:textStyle="bold|normal"
        android:textColor="@color/grey"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/desc_recommen"
        app:layout_constraintStart_toStartOf="@id/desc_recommen"/>


</androidx.constraintlayout.widget.ConstraintLayout>