<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.ThemeSettingFragment"
    app:cardCornerRadius="20dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/food1"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            style="@style/tvPopupMenu_Style"
            android:fontFamily="@font/inter"
            android:text="@string/food1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/food2"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            style="@style/tvPopupMenu_Style"
            android:fontFamily="@font/inter"
            android:text="@string/food2"
            app:layout_constraintTop_toBottomOf="@id/food1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/food3"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            style="@style/tvPopupMenu_Style"
            android:fontFamily="@font/inter"
            android:text="@string/food3"
            app:layout_constraintTop_toBottomOf="@id/food2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>